--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "pinia": "^2.0.28",
+    "unocss": "^0.48.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
